force-app/main/default/objects/Account/fields/Minimos_grupos__c.field-meta.xml
<CustomField>
    <fullName>Minimos_grupos__c</fullName>
    <label>Minimos grupos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>