force-app/main/default/objects/Account/fields/Modelo_Plan__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Plan__c</fullName>
    <label>Modelo Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>