force-app/main/default/objects/Account/fields/Modelo_Plan_Codigo__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Plan_Codigo__c</fullName>
    <label>Modelo Plan Codigo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>