force-app/main/default/objects/Account/fields/Modelo_Plan_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Plan_Nombre__c</fullName>
    <label>Modelo Plan Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>