force-app/main/default/objects/Account/fields/Monto_excedente__c.field-meta.xml
<CustomField>
    <fullName>Monto_excedente__c</fullName>
    <label>Monto excedente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>