force-app/main/default/objects/Account/fields/Motivo_alta_masiva_afiliado__c.field-meta.xml
<CustomField>
    <fullName>Motivo_alta_masiva_afiliado__c</fullName>
    <label>Motivo alta masiva afiliado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>