force-app/main/default/objects/Account/fields/Motivo_baja_masiva_de_afiliado__c.field-meta.xml
<CustomField>
    <fullName>Motivo_baja_masiva_de_afiliado__c</fullName>
    <label>Motivo baja masiva de afiliado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>