force-app/main/default/objects/Account/fields/Motivo_Baja_Prestador__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Baja_Prestador__c</fullName>
    <label>Motivo Baja Prestador</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>