force-app/main/default/objects/Account/fields/Motivo_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_baja__c</fullName>
    <label>Motivo de baja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>