force-app/main/default/objects/Account/fields/Motivo_empresa__c.field-meta.xml
<CustomField>
    <fullName>Motivo_empresa__c</fullName>
    <description>Campo motivo de empresa</description>
    <label>Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>