force-app/main/default/objects/Account/fields/Nombre_delegacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_delegacion__c</fullName>
    <label>Nombre delegación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>