force-app/main/default/objects/Account/fields/Obra_social__c.field-meta.xml
<CustomField>
    <fullName>Obra_social__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra social</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas (Obra social)</relationshipLabel>
    <relationshipName>PersonalyDelgacion</relationshipName>
    <type>Lookup</type>
</CustomField>