force-app/main/default/objects/Account/fields/Obra_social_ant_codigo__c.field-meta.xml
<CustomField>
    <fullName>Obra_social_ant_codigo__c</fullName>
    <label>Obra social ant código</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>