force-app/main/default/objects/Account/fields/Obra_social_nombre__c.field-meta.xml
<CustomField>
    <fullName>Obra_social_nombre__c</fullName>
    <label>Obra social nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>