force-app/main/default/objects/Account/fields/Observaciones_prestador__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_prestador__c</fullName>
    <label>Observaciones</label>
    <type>TextArea</type>
</CustomField>