force-app/main/default/objects/Account/fields/Organizacion__c.field-meta.xml
<CustomField>
    <fullName>Organizacion__c</fullName>
    <label>Organización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Rosario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>