force-app/main/default/objects/Account/fields/PAM__c.field-meta.xml
<CustomField>
    <fullName>PAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAM</label>
    <type>Checkbox</type>
</CustomField>