force-app/main/default/objects/Account/fields/Plan_Codigo__c.field-meta.xml
<CustomField>
    <fullName>Plan_Codigo__c</fullName>
    <label>Plan Codigo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>