force-app/main/default/objects/Account/fields/Plan_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Plan_Nombre__c</fullName>
    <label>Plan Nombre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTEGRAL AS200</fullName>
            </value>
            <value>
                <fullName>INTEGRAL AS204</fullName>
            </value>
            <value>
                <fullName>PLAN 11 PMO</fullName>
            </value>
            <value>
                <fullName>PLAN 2</fullName>
            </value>
            <value>
                <fullName>PLAN 2D</fullName>
            </value>
            <value>
                <fullName>PLAN 3</fullName>
            </value>
            <value>
                <fullName>PLAN 50</fullName>
            </value>
            <value>
                <fullName>PLAN 9</fullName>
            </value>
            <value>
                <fullName>SELECTA AS400</fullName>
            </value>
            <value>
                <fullName>SELECTA AS500</fullName>
            </value>
            <value>
                <fullName>SUPERIOR AS300</fullName>
            </value>
            <value>
                <fullName>PLAN 4 40</fullName>
            </value>
            <value>
                <fullName>PLAN 1 40</fullName>
            </value>
            <value>
                <fullName>PLAN ACTIVO 7 40</fullName>
            </value>
            <value>
                <fullName>PLAN 1</fullName>
            </value>
            <value>
                <fullName>PLAN 4</fullName>
            </value>
            <value>
                <fullName>PLAN 5</fullName>
            </value>
            <value>
                <fullName>PLAN 6</fullName>
            </value>
            <value>
                <fullName>PLAN 7</fullName>
            </value>
            <value>
                <fullName>PLAN 8</fullName>
            </value>
            <value>
                <fullName>PLAN 10/1</fullName>
            </value>
            <value>
                <fullName>PLAN 10/2</fullName>
            </value>
            <value>
                <fullName>PLAN 11</fullName>
            </value>
            <value>
                <fullName>PLAN 11/1</fullName>
            </value>
            <value>
                <fullName>PLAN 11/2</fullName>
            </value>
            <value>
                <fullName>PLAN 12</fullName>
            </value>
            <value>
                <fullName>PLAN 13</fullName>
            </value>
            <value>
                <fullName>PLAN 14</fullName>
            </value>
            <value>
                <fullName>PLAN 15/1</fullName>
            </value>
            <value>
                <fullName>PLAN 15/2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>