force-app/main/default/objects/Account/fields/Porcentaje_de_canje__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_canje__c</fullName>
    <label>Porcentaje de canje</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>