force-app/main/default/objects/Account/fields/Porcentaje_de_comision_dateras__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_comision_dateras__c</fullName>
    <label>Porcentaje de comisión dateras</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>