force-app/main/default/objects/Account/fields/Porcentaje_de_Limite_de_edad__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_Limite_de_edad__c</fullName>
    <label>Porcentaje de Límite de edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>