force-app/main/default/objects/Account/fields/Prefijo__c.field-meta.xml
<CustomField>
    <fullName>Prefijo__c</fullName>
    <label>Prefijo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>