force-app/main/default/objects/Account/fields/Scoring__c.field-meta.xml
<CustomField>
    <fullName>Scoring__c</fullName>
    <formula>CASE(
				  Color_scoring__c,
				&quot;VERDE&quot;,IMAGE(&quot;https://acasalud--uat--c.documentforce.com/servlet/servlet.FileDownload?file=0158A0000001sPB&quot;,&quot;VERDE&quot;,15,41),
				&quot;AMARILLO&quot;,IMAGE(&quot;https://acasalud--uat--c.documentforce.com/servlet/servlet.FileDownload?file=0158A0000001sP9&quot;,&quot;AMARILLO&quot;,15,41),
				&quot;ROJO&quot;,IMAGE(&quot;https://acasalud--uat--c.documentforce.com/servlet/servlet.FileDownload?file=0158A0000001sPA&quot;,&quot;ROJO&quot;,15,41),
				&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scoring</label>
    <type>Text</type>
</CustomField>