force-app/main/default/objects/Account/fields/Sujeto_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Sujeto_facturacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sujeto facturación</label>
    <type>Checkbox</type>
</CustomField>