force-app/main/default/objects/Account/fields/Tiene_alertas__c.field-meta.xml
<CustomField>
    <fullName>Tiene_alertas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene alertas</label>
    <type>Checkbox</type>
</CustomField>