force-app/main/default/objects/Account/fields/Tiene_evento_de_exclusion__c.field-meta.xml
<CustomField>
    <fullName>Tiene_evento_de_exclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene evento de exclusión</label>
    <type>Checkbox</type>
</CustomField>