force-app/main/default/objects/Account/fields/Tipo_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_baja__c</fullName>
    <label>Tipo de baja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>