force-app/main/default/objects/Account/fields/Tipo_de_baja_nombre__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_baja_nombre__c</fullName>
    <label>Tipo de baja nombre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Baja Subvencionada</fullName>
            </value>
            <value>
                <fullName>Baja no Subvencionada</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
            <value>
                <fullName>Referido liquidado</fullName>
            </value>
            <value>
                <fullName>No referido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>