force-app/main/default/objects/Account/fields/Tipo_de_comision_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_comision_de_venta__c</fullName>
    <label>Tipo de comisión de venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>