force-app/main/default/objects/Account/fields/Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Documento</valueSetName>
    </valueSet>
</CustomField>