force-app/main/default/objects/Account/fields/Tipo_de_solicitud_baja_de_afiliado__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_solicitud_baja_de_afiliado__c</fullName>
    <label>Tipo de solicitud baja de afiliado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>