force-app/main/default/objects/Account/fields/Tipo_delegacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_delegacion__c</fullName>
    <label>Tipo delegación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REAL</fullName>
            </value>
            <value>
                <fullName>VIRTUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>