force-app/main/default/objects/Account/fields/Titular__c.field-meta.xml
<CustomField>
    <fullName>Titular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titular</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>TIT</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Familiares</relationshipLabel>
    <relationshipName>A_cargo</relationshipName>
    <type>Lookup</type>
</CustomField>