force-app/main/default/objects/Account/fields/Titular_apellidos__c.field-meta.xml
<CustomField>
    <fullName>Titular_apellidos__c</fullName>
    <label>Titular apellidos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>