force-app/main/default/objects/Account/fields/Titular_codigo__c.field-meta.xml
<CustomField>
    <fullName>Titular_codigo__c</fullName>
    <label>Titular código</label>
    <length>255</length>
    <type>Text</type>
</CustomField>