force-app/main/default/objects/Account/fields/Titular_nombres__c.field-meta.xml
<CustomField>
    <fullName>Titular_nombres__c</fullName>
    <label>Titular nombres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>