force-app/main/default/objects/Account/fields/Ultima_alta__c.field-meta.xml
<CustomField>
    <fullName>Ultima_alta__c</fullName>
    <label>Ultima alta</label>
    <type>Date</type>
</CustomField>