force-app/main/default/objects/Account/recordTypes/Delegacion.recordType-meta.xml
<RecordType>
    <fullName>Delegacion</fullName>
    <active>true</active>
    <description>Filiales y agencias</description>
    <label>Delegación</label>
</RecordType>