force-app/main/default/objects/Account/recordTypes/Efector.recordType-meta.xml
<RecordType>
    <fullName>Efector</fullName>
    <active>true</active>
    <description>Efectores y Prestadores</description>
    <label>Efector</label>
</RecordType>