force-app/main/default/objects/Account/recordTypes/Obra_social.recordType-meta.xml
<RecordType>
    <fullName>Obra_social</fullName>
    <active>true</active>
    <label>Obra social</label>
</RecordType>