force-app/main/default/objects/Account/validationRules/Edicion_Nombre_cuenta.validationRule-meta.xml
<ValidationRule>
    <fullName>Edicion_Nombre_cuenta</fullName>
    <active>true</active>
    <description>Front y CDC no pueden editar el campo Name</description>
    <errorConditionFormula>AND(
ISCHANGED(Name),
OR( 
$Profile.Name = &quot;CDC&quot;,
$Profile.Name = &quot;Front&quot;
))</errorConditionFormula>
    <errorMessage>No posee los permisos para poder modificar el nombre de la Cuenta</errorMessage>
</ValidationRule>