force-app/main/default/objects/Account/validationRules/No_borrar_correo_Front.validationRule-meta.xml
<ValidationRule>
    <fullName>No_borrar_correo_Front</fullName>
    <active>true</active>
    <description>Ni front ni CDC pueden borrar el valor del campo Correo electronico</description>
    <errorConditionFormula>AND(
ISCHANGED( PersonEmail ),
ISBLANK(PersonEmail ),
OR(
$Profile.Name = &quot;CDC&quot;,
$Profile.Name = &quot;Front&quot;
))</errorConditionFormula>
    <errorMessage>No posee los permisos para poder eliminar el correo de la Cuenta</errorMessage>
</ValidationRule>