force-app/main/default/objects/Account/validationRules/Validar_nro_documento.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_nro_documento</fullName>
    <active>true</active>
    <description>Validar que el nro de documento contenga solo numeros</description>
    <errorConditionFormula>AND(
				OR(
        ISNEW(),
        ISCHANGED(Numero_de_documento__c) 
				),
				NOT(ISBLANK(Numero_de_documento__c)),
    NOT(REGEX(Numero_de_documento__c,&quot;^[0-9]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Numero_de_documento__c</errorDisplayField>
    <errorMessage>El Número de documento debe contener solo números (sin puntos)</errorMessage>
</ValidationRule>