force-app/main/default/objects/Account/listViews/Agenca_650_272.listView-meta.xml
<ListView>
    <fullName>Agenca_650_272</fullName>
    <columns>Codigo_de_Afiliado__c</columns>
    <columns>Segmento_de_grupo_familiar__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Estado__c</columns>
    <columns>Estado_de_cuenta__c</columns>
    <columns>Numero_de_documento__c</columns>
    <columns>PC_BIRTHDATE</columns>
    <columns>Delegacion__c</columns>
    <columns>PC_EMAIL</columns>
    <columns>Fecha_Alta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>FAM,TIT,Titular</value>
    </filters>
    <filters>
        <field>Estado__c</field>
        <operation>contains</operation>
        <value>Activo,Generado</value>
    </filters>
    <filters>
        <field>Agencia_codigo__c</field>
        <operation>equals</operation>
        <value>650272</value>
    </filters>
    <filters>
        <field>Fecha_Alta__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2020</value>
    </filters>
    <label>Agenca 650.272</label>
</ListView>