force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Titular_codigo__c</columns>
    <columns>Codigo_de_Afiliado__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Parentesco__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Estado__c</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>Localidad_new__c</columns>
    <columns>Fecha_de_baja__c</columns>
    <columns>Fecha_baja_prestador__c</columns>
    <columns>Fecha_vigencia__c</columns>
    <columns>Scoring__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Cuentas</label>
</ListView>