force-app/main/default/objects/Account/listViews/Asociados_con_Plan_AS100.listView-meta.xml
<ListView>
    <fullName>Asociados_con_Plan_AS100</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Estado__c</columns>
    <columns>Localidad_Nombre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plan_Codigo__c</field>
        <operation>equals</operation>
        <value>50</value>
    </filters>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>Asociados con Plan 50 - Activos</label>
</ListView>