force-app/main/default/objects/Account/listViews/Asociados_Crespo_ER.listView-meta.xml
<ListView>
    <fullName>Asociados_Crespo_ER</fullName>
    <columns>Codigo_de_Entidad__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Delegacion__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agencia_codigo__c</field>
        <operation>equals</operation>
        <value>650208</value>
    </filters>
    <label>Asociados Crespo ER</label>
</ListView>