force-app/main/default/objects/Account/listViews/Asociados_de_adm_de_ventas.listView-meta.xml
<ListView>
    <fullName>Asociados_de_adm_de_ventas</fullName>
    <columns>Codigo_de_Afiliado__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Gentilicio__c</columns>
    <columns>Estado__c</columns>
    <columns>Segmento_de_grupo_familiar__c</columns>
    <columns>Afiliacion__c</columns>
    <columns>Estado_de_cuenta_Corriente__c</columns>
    <columns>Agencia_nombre__c</columns>
    <columns>Estado_de_cuenta_corriente_color__c</columns>
    <columns>Codigo_de_delegacion__c</columns>
    <columns>Localidad_Nombre__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Plan_Codigo__c</columns>
    <columns>Fecha_vigencia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Cuenta_personal</value>
    </filters>
    <label>Asociados de adm de ventas</label>
</ListView>