force-app/main/default/objects/Account/listViews/Delegaciones.listView-meta.xml
<ListView>
    <fullName>Delegaciones</fullName>
    <columns>Afi_Id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>iEstado__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Tipo_delegacion__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Estado__c</columns>
    <columns>Agencia_codigo__c</columns>
    <columns>Delegacion2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Delegacion</value>
    </filters>
    <label>Delegaciones</label>
</ListView>