force-app/main/default/objects/Account/listViews/Efectores.listView-meta.xml
<ListView>
    <fullName>Efectores</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Codigo_de_efector__c</columns>
    <columns>Es_Prestador__c</columns>
    <columns>Es_Profesional__c</columns>
    <columns>iEstado__c</columns>
    <columns>Estado_Prestador__c</columns>
    <columns>Clase_efector__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Matricula_nacional__c</columns>
    <columns>Matricula_provincial__c</columns>
    <columns>Matricula_provincial2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Efector</value>
    </filters>
    <label>Efectores</label>
</ListView>