force-app/main/default/objects/Account/listViews/Empresas.listView-meta.xml
<ListView>
    <fullName>Empresas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Codigo_de_empresa__c</columns>
    <columns>CUIT__c</columns>
    <columns>iEstado__c</columns>
    <columns>Correo_electronico__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Empresa</value>
    </filters>
    <label>Empresas</label>
</ListView>