force-app/main/default/objects/Account/listViews/Obras_sociales.listView-meta.xml
<ListView>
    <fullName>Obras_sociales</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Codigo_de_obra_social__c</columns>
    <columns>iEstado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Obra_social</value>
    </filters>
    <label>Obras sociales</label>
</ListView>