force-app/main/default/objects/Account/listViews/Prestadores.listView-meta.xml
<ListView>
    <fullName>Prestadores</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Es_Prestador__c</columns>
    <columns>iEstado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Es_Prestador__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Prestadores</label>
</ListView>